# chimg

./: .gitignore  .readthedocs.yaml  README.rst  SECURITY.md  TODO  pyproject.toml  tox.ini
.github/workflows/: pr.yaml
chimg/: chroot.py  common.py  config.py  context.py  image_customizer.py  snap_seed_parse.py
chimg/cli/: __init__.py
chimg/tests/: conftest.py  test_chroot.py  test_chroot_ppa.py  test_context.py  test_docs.py
chimg/tests/fixtures/: config1.yaml  config2.yaml
chimg/tests/functional/: test_chroot.py
chimg/tests/functional/configs/: deb-only.yaml  files.yaml  kernel-only.yaml  ppas.yaml  snap-only-with-apparmor-feature-path.yaml  snap-only.yaml  snaps-edge.yaml  snaps-stable.yaml
chimg/tests/functional/configs/apparmor-features-paths/6.14/namespaces/: userns_create
chimg/tests/functional/configs/apparmor-features-paths/6.14/network_v9/: af_mask
chimg/tests/functional/configs/apparmor-features-paths/6.14/policy/: permstable32  permstable32_version
chimg/tests/functional/example_files/: single_file.txt
chimg/tests/functional/example_files/directory_with_multiple_files/: file_1.txt  file_2.txt
docs/: conf.py  index.rst
docs/config-samples/: config-deb-only.yaml  config-files-only.yaml  config-kernel-only.yaml  config-snap-only.yaml
docs/how-to/: index.rst
docs/reference/: configuration.rst  index.rst
json_schema/: json_schema.html  json_schema.json
snap/: snapcraft.yaml
